--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://joshuaminja.github.io/PollingApp",
+  "homepage": "http://joshuaminja.github.io/Polling-App",
   "name": "svelte-app",
   "version": "1.0.0",
   "scripts": {
